# codex-app-plus

./: .gitignore  AGENTS.md  README.md  README.openrouter.md  README.zh-CN.md  index.html  openrouter-csharp.bat  openrouter-php.bat  openrouter.bat  package.json  pnpm-lock.yaml  updatelog.md
scripts/: generate-protocol.mjs  migrate-codex-home.ps1  openrouter-models.ps1
src/: App.tsx  main.tsx  replica-composer-command-palette.css  replica-git.css  (+17 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_environment.rs  agents_config.rs  app_server_io.rs  app_server_stderr.rs  app_support.rs  codex_cli.rs  codex_data.rs  codex_session_text.rs  command_utils.rs  commands.rs  custom_prompts.rs  events.rs  main.rs  models.rs  process_manager.rs  process_supervisor.rs  proxy_environment.rs  proxy_settings.rs  rpc_transport.rs  terminal_manager.rs  terminal_output_decoder.rs  terminal_shell.rs  test_support.rs  window_theme.rs  windows_child_process.rs  workspace_launcher.rs  workspace_state.rs  wsl_support.rs
src-tauri/src/app_support/: tests.rs
src-tauri/src/codex_auth/: live.rs  live_io.rs  mod.rs  storage.rs  tests.rs  types.rs
src-tauri/src/codex_cli/: mod.rs  windows.rs  wsl.rs
src-tauri/src/codex_data/: tests.rs
src-tauri/src/codex_provider/: config_patch.rs  mod.rs  support.rs  tests.rs
src-tauri/src/git/: commands.rs  diff.rs  mod.rs  models.rs  parse.rs  process.rs  repository.rs  runtime.rs  service.rs  sync.rs  workspace_diffs.rs
src-tauri/src/workspace_launcher/: tests.rs
(+650 files in other folders)
